Fri Jul 15 13:19:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB.h:
          Added forward declaration NVList

        * tao/tao.mpc:
        * tao/extra_core.mpb:
          Moved ClientRequestInterceptor_Adapter and ServerRequestInterceptor_
          Adapter to extra_core, don't need them in a minimum build. Removed
          tao.mpc from tao.mpv, it is already in extra_core.mpb

Fri Jul 15 13:09:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/DynamicInterface/Context.cpp:
        * tao/DynamicInterface/DII_Invocation.cpp:
        * tao/DynamicInterface/Request.{h,cpp}:
        * tao/DynamicInterface/Server_Request.{h,cpp,inl}:
          Use more forward declarations and reduced the includes done, doxygen
          improvement and removed explicit templates

Fri Jul 15 11:49:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/NVList.cpp:
          Initialise pointers with 0

Fri Jul 15 10:36:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Any.h:
          Removed not needed forward declaration of CORBA_NVList

Thu Jul 14 22:15:02 2005  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/Codeset/Codeset.cpp:
        * tao/Codeset/Codeset.h:
        * tao/Codeset/Codeset_Manager_Factory.cpp:
        * tao/Codeset/Codeset_Manager_Factory.h:
        * tao/Codeset/Codeset_Manager_i.cpp:
        * tao/Codeset/Codeset_Manager_i.h:

          Separated the classes responsible for initailizing the codeset
          library from the codeset manager implementation. This is an
          effort to improve the integration with either static or shared
          libraries.

        * tao/Makefile.am:

          Added the new files mentioned above.

        * tao/orbconf.h:

          Changed the default for codeset negotiation to be 0 for static
          builds.

Thu Jul 14 22:52:09 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/PortableServer/Fixed_Array_SArgument_T.h: